도서 검색 기능 추가

--- a/Desktop/capstone/music-generator.html
+++ b/Desktop/capstone/music-generator.html
@@ -46,29 +46,13 @@
                     <div class="book-input-container">
                         <div class="book-inputs">
                             <input type="text" id="bookTitle" placeholder="책 제목을 입력하세요" required>
+                            <button type="button" class="search-btn" id="searchBookBtn" style="margin-left:6px;">도서 검색</button>
                             <input type="text" id="bookAuthor" placeholder="저자를 입력하세요" required>
+                            <div id="book-desc-info" style="margin:10px 0; color:#444; font-size:0.98em;"></div>
                             <button type="button" class="generate-btn" id="generateInitialMusic">
                                 <i class="fas fa-music"></i>
                                 초기 음악 생성
                             </button>
-                        </div>
-                    </div>
-                </section>
-
-                <!-- 통합 음악 플레이어 -->
-                <section class="integrated-player-section">
-                    <div class="integrated-player">
-                        <div class="player-controls">
-                            <button class="play-btn" id="playIntegratedMusic">
-                                <i class="fas fa-play"></i>
-                            </button>
-                            <span class="player-title">통합 플레이리스트</span>
-                            <button class="download-btn" id="downloadIntegratedMusic">
-                                <i class="fas fa-download"></i>
-                            </button>
-                        </div>
-                        <div class="progress-bar">
-                            <div class="progress-fill"></div>
                         </div>
                     </div>
                 </section>
