--- a/Desktop/capstone/my-bookshelf.html
+++ b/Desktop/capstone/my-bookshelf.html
@@ -76,6 +76,25 @@
                 </div>
             </div>
 
+            <!-- 통합 플레이리스트(통합 음악 플레이어) -->
+            <section class="integrated-player-section">
+                <div class="integrated-player">
+                    <div class="player-controls">
+                        <button class="play-btn" id="playIntegratedMusic">
+                            <i class="fas fa-play"></i>
+                        </button>
+                        <span class="player-title">통합 플레이리스트</span>
+                        <button class="download-btn" id="downloadIntegratedMusic">
+                            <i class="fas fa-download"></i>
+                        </button>
+                    </div>
+                    <div class="progress-bar">
+                        <div class="progress-fill"></div>
+                    </div>
+                </div>
+            </section>
+            <!-- // 통합 플레이리스트 -->
+
             <!-- 플레이리스트 그리드 -->
             <div class="playlist-grid" id="playlistGrid">
                 <!-- 새로 만들기 카드 -->
